Fix: Bootstrap 4 styling for the paging control on smaller screens - align to center
DD-1355

--- a/media/css/dataTables.bootstrap4.css
+++ b/media/css/dataTables.bootstrap4.css
@@ -161,6 +161,9 @@ div.dataTables_scrollFoot > .dataTables_scrollFootInner > table {
   div.dataTables_wrapper div.dataTables_paginate {
     text-align: center;
   }
+  div.dataTables_wrapper div.dataTables_paginate ul.pagination {
+    justify-content: center !important;
+  }
 }
 table.dataTable.table-sm > thead > tr > th {
   padding-right: 20px;
